add --enable-preview to experiment