@@ -159,6 +159,7 @@
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<compilerArgs>
+						<arg>--enable-preview</arg>
 						<arg>--add-exports</arg>
 						<arg>jdk.incubator.foreign/jdk.incubator.foreign=ALL-UNNAMED</arg>
 						<arg>--add-modules</arg>
